logo resizing now has transition. fixed footer size bug on safari

--- a/src/Footer/Footer.css
+++ b/src/Footer/Footer.css
@@ -1,10 +1,11 @@
 #sparklesContainer {
     width: 100%;
-    display: flex;
-    justify-content: space-around;
     margin: 3em 0;
     filter: opacity(70%);
 }
 .sparkle {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     width: 10%;
 }
